<resources>
    <string name="app_name">Mr Patatohead</string>
    <string name="mustache">Mustache</string>
    <string name="arms">Arms</string>
    <string name="ears">Ears</string>
    <string name="eyes">Eyes</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="glasses" >Glasses</string>
    <string name="hat">Hat</string>
    <string name="mouth">Mouth</string>
    <string name="Nose">Nose</string>
    <string name="Shoes" >Shoes</string>
</resources>
